--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,18 +26,11 @@
     <h1 class="lotteryhead">CAR LOTTERY!</h1>
   </div>
   <div>
-    <form method="POST" action="SelectLottery">
+    <form method="post" action="SelectLottery">
       <select name="Type" size="1">
         <option>Fire</option>
         <option>Water</option>
         <option>Air</option>
-      </select>
-      <br>
-      <select name="Ticket" size="1">
-        <option>One</option>
-        <option>Two</option>
-        <option>Three</option>
-        <option>Four</option>
       </select>
       <br><br>
       <input type="submit">
