--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,11 @@
         <option>Water</option>
         <option>Air</option>
       </select>
+      <select name="Ticket" size="1">
+        <option>One</option>
+        <option>Two</option>
+        <option>Three</option>
+      </select>
       <br><br>
       <input type="submit">
     </form>
